# friends_service

./: .gitignore  README.md  openapi.yaml  pyproject.toml
friends/: enums.py  models.py  serializers.py  storage.py  urls.py  views.py
friends/utils/: friendship.py
social_network/: settings.py  urls.py
