[tool.poetry]
name = "friends-service"
version = "0.1.0"
description = ""
authors = ["ruslan <ruslanzakharov3008@gmail.com>"]
readme = "README.md"
packages = [{include = "friends_service"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
